--- a/2021面试准备/js/27.两种事件绑定的差别.md
+++ b/2021面试准备/js/27.两种事件绑定的差别.md
@@ -42,3 +42,12 @@ box.addEventListener('click',fucntion() {
 ————————————————
 版权声明：本文为CSDN博主「NewDayStudy」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
 原文链接：https://blog.csdn.net/NewDayStudy/article/details/78656534
+
+
+
+
+
+- event.target返回触发事件的元素
+- event.currentTarget返回绑定事件的元素
+
+**event.target 属性**可以用来**实现事件委托** (event delegation)
