--- a/2021面试准备/js/34.var循环修改问题.md
+++ b/2021面试准备/js/34.var循环修改问题.md
@@ -10,3 +10,31 @@ for(var i =0;i<5;i++) {
 ```
 
 修改上面代码改成正常输出
+
+### 闭包
+
+那么怎么改呢？说说最常见的改法就是使用闭包。
+
+```
+for(var i=0; i<6; i++){
+    (function(j){
+        setTimeout(function(){
+            console.log(j);
+        },j*1000);
+    })(i);
+}
+```
+
+通过闭包，将i的变量驻留在内存中，当输出j时，引用的是外部函数A的变量值i，i的值是根据循环来的，执行setTimeout时已经确定了里面的的输出了。
+
+### 函数传参
+
+还有一种就是给setTimeout添加第三个参数。
+
+```
+for(var i=0;i<6;i++){
+    setTimeout(function(j){
+        console.log(j);
+    },i*1000,i);
+}
+```
