--- a/2021面试准备/js/4.几种设计模式.md
+++ b/2021面试准备/js/4.几种设计模式.md
@@ -2,6 +2,8 @@
 
 只能存在一个实例
 
+为了防止频繁地创建对象使得内存飙升，单例模式可以让程序仅在内存中创建一个对象，让所有需要调用的地方都共享这一单例对象。
+
 ```js
 class Obj {
     constructor() {
@@ -128,6 +130,8 @@ li.notify('11')
 
 # 工厂模式
 
+应用：权限路由 addRouteshttps://segmentfault.com/a/1190000015437338
+
 ```js
 //User类
 class User {
@@ -159,6 +163,49 @@ class User {
 let superAdmin = User.getInstance('superAdmin');
 let admin = User.getInstance('admin');
 let normalUser = User.getInstance('user');
+
+```
+
+# 工厂方法模式
+
+把实现的操作放在子类中
+
+```js
+class User {
+  constructor(name = '', viewPage = []) {
+    if(new.target === User) {
+      throw new Error('抽象类不能实例化!');
+    }
+    this.name = name;
+    this.viewPage = viewPage;
+  }
+}
+
+class UserFactory extends User {
+  constructor(name, viewPage) {
+    super(name, viewPage)
+  }
+  create(role) {
+    switch (role) {
+      case 'superAdmin': 
+        return new UserFactory( '超级管理员', ['首页', '通讯录', '发现页', '应用数据', '权限管理'] );
+        break;
+      case 'admin':
+        return new UserFactory( '普通用户', ['首页', '通讯录', '发现页'] );
+        break;
+      case 'user':
+        return new UserFactory( '普通用户', ['首页', '通讯录', '发现页'] );
+        break;
+      default:
+        throw new Error('参数错误, 可选参数:superAdmin、admin、user')
+    }
+  }
+}
+
+let userFactory = new UserFactory();
+let superAdmin = userFactory.create('superAdmin');
+let admin = userFactory.create('admin');
+let user = userFactory.create('user');
 
 ```
 
