--- a/2021面试准备/手写八股文/13.进制转换.md
+++ b/2021面试准备/手写八股文/13.进制转换.md
@@ -56,3 +56,30 @@ function fn(num,base) {
 console.log(fn(11,16));
 ```
 
+
+
+excel问题
+
+```js
+/**
+ * @param {number} columnNumber
+ * @return {string}
+ */
+var convertToTitle = function(columnNumber) {
+    let res = ''
+    let position = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
+    let stack = []
+    while(columnNumber>0) {
+        columnNumber--
+        let rem = columnNumber%26
+        stack.push(rem)
+        columnNumber = Math.floor(columnNumber/26)
+    }
+    console.log(stack)
+    while(stack.length>0) {
+        res += position[stack.pop()]
+    }
+    return res
+};
+```
+
