--- a/nginx/1.概念.md
+++ b/nginx/1.概念.md
@@ -35,7 +35,7 @@ VPN就是正向代理
 server {
         listen       80;
         server_name  www.123.com;
-
+		root /usr/local/xxx/public/dist
         location / {
             proxy_pass http://127.0.0.1:8080;
             index  index.html index.htm index.jsp;
@@ -67,3 +67,29 @@ server {
     ```
 
 - index 首页
+
+# nginx 解决history模式问题
+
+```nginx
+location / {
+  try_files $uri $uri/ /index.html;
+}
+```
+
+$uri表示的是与当前路由匹配的内容，举个例子：
+
+```nginx
+当前路由为http://www.juejin.im/prerend，此时$uri=http://www.juejin.im/prerend；
+```
+
+所以上面重点行的意思就是查找当前匹配的路由，没有再找当前路由下面的内容，即$uri/的意义，如果都没有则返回指定文件，我这边包括官网上的设置都是返回首页的index.html文件，这样只要路由刷新找不到对应的资源就会返回首页，并加载首页资源，注意：
+
+```nginx
+/index.html 对应的路径是上面root设置的路径
+```
+
+
+作者：空白2020
+链接：https://juejin.cn/post/6844904041558999053
+来源：稀土掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
