--- a/2021面试准备/网络/17.dns的解析过程.md
+++ b/2021面试准备/网络/17.dns的解析过程.md
@@ -1,3 +1,22 @@
 浏览器缓存，系统缓存，路由器缓存，IPS服务器缓存，根域名服务器缓存，顶级域名服务器缓存，主域名服务器缓存
 
 https://blog.csdn.net/yanshuanche3765/article/details/82589210
+
+
+
+
+
+- 1、检查**浏览器缓存**中是否存在该域名与IP地址的映射关系，如果有则解析结束，没有则继续
+- 2、到**系统本地**查找映射关系，一般在`hosts`文件中，如果有则解析结束，否则继续
+- 3、到**本地域名服务器**去查询，有则结束，否则继续
+- 4、**本地域名服务器**查询**根域名服务器**，该过程并不会返回映射关系，只会告诉你去下级服务器(顶级域名服务器)查询
+- 5、**本地域名服务器**查询**顶级域名服务器**(即`com`服务器)，同样不会返回映射关系，只会引导你去二级域名服务器查询
+- 6、**本地域名服务器**查询**二级域名服务器**(即`baidu.com`服务器)，引导去三级域名服务器查询
+- 7、**本地域名服务器**查询**三级域名服务器**(即`mail.baidu.com`服务器)，此时已经是最后一级了，如果有则返回映射关系，则**本地域名服务器**加入自身的映射表中，方便下次查询或其他用户查找，同时返回给该用户的计算机，没有找到则网页报错
+- 8、如果还有下级服务器，则依此方法进行查询，直至返回映射关系或报错
+
+像该过程中的第1、2、3点，仅限于在`本地域名服务器`中查找，如果有则直接返回映射关系，否则就去其他`DNS`服务器中查询，这种查询方式我们叫做**递归查询**。
+
+第3、4、5、6、7、8过程，他们只会给出下级`DNS`服务器的地址，并不会直接返回映射关系，这种查询方式叫做**迭代查询**
+
+。
