--- a/2021面试准备/js/23.loader和plugin的原理.md
+++ b/2021面试准备/js/23.loader和plugin的原理.md
@@ -55,7 +55,7 @@ loader用来处理非js文件
 
    
 
-4. 在项目中引入 import './test.wy'这个文件
+4. 在项目中引入 import './test.zp'这个文件
 
 5. run build 最后内容被转换为 console.log('我是张朋')
 
