--- a/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
+++ b/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
@@ -44,3 +44,18 @@
 流量控制
      流量控制发生在发送端和接收端之间，只是点到点之间的控制
 
+
+
+# 超时重传和快重传
+
+**TCP超时重传机制**，结合上面说的**慢启动**和**拥塞避免**使用就是发送完数据后开始倒计时，如果在**重发超时内**没有收到对接收方发来的ACK的话就去执行上述的**乘法减小过程（设置sstresh为原来一半）** 并重新开始慢开始算法，重新发送数据。
+
+**TCP快重传**， 则是允许发送方再连续收到**3 个重复的确认**后就可以开始执行乘法减小过程而不必再等待重发超时时间。这就需要**接收方每收到一个*****失序**的报文段就立即发出重复确认以让发送发及早知道有报文段丢失，而不是等待自己发送数据的时候进行捎带确认。
+
+
+
+作者：公众号_码农富哥
+链接：https://juejin.cn/post/6844904073611722760
+来源：稀土掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
