--- a/2021面试准备/网络/24.cookie samesite.md
+++ b/2021面试准备/网络/24.cookie samesite.md
@@ -1,4 +1,34 @@
-Cookie 的`SameSite`属性用来限制第三方 Cookie，从而减少安全风险。
+# 跨站和跨域
+
+**跨站一定跨域，但是跨域不一定跨站**
+
+同站/跨站。对比**第一方**。**第三方** 
+
+只要两个 URL 的 eTLD+1 相同即可，不需要考虑协议和端口 就是同站
+
+注册于 Mozilla 维护的公共后缀列表（Public 　　　　　Suffix List）中，例如，.com、.co.uk、.github.io 等
+
+顶级域名+二级域名，例如 taobao.com
+
+www.taobao.com 和 www.baidu.com 是跨站，www.a.taobao.com 和 www.b.taobao.com 是同站，a.github.io 和 b.github.io 是跨站(注意是跨站)。
+
+
+
+​	
+
+Cookie 的`SameSite`属性用来限制**第三方 Cookie**，从而减少安全风险。
+
+限制第三方发送cookie，可以控制那个cookie不被发送
+
+### withCredenitals
+
+跨域的情况下，默认是不会携带请求域下的`cookie` 的，比如`http://domain-a.com` 站点发送一个 `http://api.domain-b.com/get` 的请求，默认是不会携带 `api.domain-b.com` 域下的 `cookie`.
+
+
+
+
+
+
 
 它可以设置三个值。
 
