--- a/2021面试准备/网络/3.XSS和CSRF.md
+++ b/2021面试准备/网络/3.XSS和CSRF.md
@@ -1,3 +1,77 @@
+## XSS漏洞总结
+
+小明的例子讲完了，下面我们来系统的看下 XSS 有哪些注入的方法：
+
+- 在 HTML 中内嵌的文本中，恶意内容以 script 标签形成注入。
+- 在内联的 JavaScript 中，拼接的数据突破了原本的限制（字符串，变量，方法名等）。
+- 在标签属性中，恶意内容包含引号，从而突破属性值的限制，注入其他属性或者标签。
+- 在标签的 href、src 等属性中，包含 `javascript:` 等可执行代码。
+- 在 onload、onerror、onclick 等事件中，注入不受控制代码。
+- 在 style 属性和标签中，包含类似 `background-image:url("javascript:...");` 的代码（新版本浏览器已经可以防范）。
+- 在 style 属性和标签中，包含类似 `expression(...)` 的 CSS 表达式代码（新版本浏览器已经可以防范）。
+
+## 防范措施
+
+### Content Security Policy
+
+严格的 CSP 在 XSS 的防范中可以起到以下的作用：
+
+- 禁止加载外域代码，防止复杂的攻击逻辑。
+- 禁止外域提交，网站被攻击后，用户的数据不会泄露到外域。
+- 禁止内联脚本执行（规则较严格，目前发现 GitHub 使用）。
+- 禁止未授权的脚本执行（新特性，Google Map 移动版在使用）。
+- 合理使用上报可以及时发现 XSS，利于尽快修复问题。
+
+#### 使用meta标签启用csp
+
+```html
+<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'; style-src cdn.example.org third-party.org; child-src https:">
+
+```
+
+#### http头信息启用csp标签
+
+### 输入内容长度控制
+
+对于不受信任的输入，都应该限定一个合理的长度。虽然无法完全防止 XSS 发生，但可以增加 XSS 攻击的难度。
+
+### HTTP ONLY
+
+禁止js读取敏感cookie
+
+## 转移html
+
+在输出html的时候进行，尽量少使用v-html/innerHtml
+
+# CSRF
+
+一般通过第三方域名，冒用用户的登录信息进行操作
+
+跨站请求，浏览器会默认携带a.com的Cookie。
+
+在同一个浏览器中，用户打开a页面获取cookie，此时打开钓鱼网站，会自动把cookie带过去，然后钓鱼网站请求a页面的接口就可以冒用用户信息，token可以解决这个问题，**他不会被自动携带过去。**
+
+**注意这里csrf 是从钓鱼网站请求的接口，他无法获取token，只能拿到被自动带过去的cookie**
+
+## 防范措施
+
+- 禁止外域发送请求（同源检测）
+- 提交时要求附加本域才能获取的信息（token）
+
+## token的用法
+
+放在服务端session中
+
+登陆后给客户端
+
+客户端存在sessionStorage
+
+每次发送请求的时候都给请求带上这个token
+
+冒用发送没法获取
+
+
+
 # XSS
 
 
@@ -77,77 +151,4 @@ if (valid) {
 }
 ```
 
-## XSS漏洞总结
-
-小明的例子讲完了，下面我们来系统的看下 XSS 有哪些注入的方法：
-
-- 在 HTML 中内嵌的文本中，恶意内容以 script 标签形成注入。
-- 在内联的 JavaScript 中，拼接的数据突破了原本的限制（字符串，变量，方法名等）。
-- 在标签属性中，恶意内容包含引号，从而突破属性值的限制，注入其他属性或者标签。
-- 在标签的 href、src 等属性中，包含 `javascript:` 等可执行代码。
-- 在 onload、onerror、onclick 等事件中，注入不受控制代码。
-- 在 style 属性和标签中，包含类似 `background-image:url("javascript:...");` 的代码（新版本浏览器已经可以防范）。
-- 在 style 属性和标签中，包含类似 `expression(...)` 的 CSS 表达式代码（新版本浏览器已经可以防范）。
-
-## 防范措施
-
-### Content Security Policy
-
-严格的 CSP 在 XSS 的防范中可以起到以下的作用：
-
-- 禁止加载外域代码，防止复杂的攻击逻辑。
-- 禁止外域提交，网站被攻击后，用户的数据不会泄露到外域。
-- 禁止内联脚本执行（规则较严格，目前发现 GitHub 使用）。
-- 禁止未授权的脚本执行（新特性，Google Map 移动版在使用）。
-- 合理使用上报可以及时发现 XSS，利于尽快修复问题。
-
-#### 使用meta标签启用csp
-
-```html
-<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'; style-src cdn.example.org third-party.org; child-src https:">
-
-```
-
-#### http头信息启用csp标签
-
-### 输入内容长度控制
-
-对于不受信任的输入，都应该限定一个合理的长度。虽然无法完全防止 XSS 发生，但可以增加 XSS 攻击的难度。
-
-### HTTP ONLY
-
-禁止js读取敏感cookie
-
-## 转移html
-
-在输出html的时候进行，尽量少使用v-html/innerHtml
-
-# CSRF
-
-一般通过第三方域名，冒用用户的登录信息进行操作
-
-跨站请求，浏览器会默认携带a.com的Cookie。
-
-在同一个浏览器中，用户打开a页面获取cookie，此时打开钓鱼网站，会自动把cookie带过去，然后钓鱼网站请求a页面的接口就可以冒用用户信息，token可以解决这个问题，**他不会被自动携带过去。**
-
-**注意这里csrf 是从钓鱼网站请求的接口，他无法获取token，只能拿到被自动带过去的cookie**
-
-## 防范措施
-
-- 禁止外域发送请求（同源检测）
-- 提交时要求附加本域才能获取的信息（token）
-
-## token的用法
-
-放在服务端session中
-
-登陆后给客户端
-
-客户端存在sessionStorage
-
-每次发送请求的时候都给请求带上这个token
-
-冒用发送没法获取
-
-
-
+1. dom树和render树有啥区别
