--- a/算法/2.爬楼梯动态规划1.md
+++ b/算法/2.爬楼梯动态规划1.md
@@ -29,6 +29,21 @@ function fn(n){
   }
   return fn(n-1)+fn(n-2)
 }
+
+//自己的写法，不如上面的变通，上面可以随意改成帕多瓦数列
+
+function feibo(n) {
+    let res = undefined
+    function loop(m,p,q) {
+        if(m===n){
+            res = p
+        }else {
+            loop(++m,q,p+q)
+        }
+    }
+    loop(0,0,1)
+    return res
+}
 ```
 
 ### 动态规划
