--- a/2021面试准备/h5/2.各类型图片差别.md
+++ b/2021面试准备/h5/2.各类型图片差别.md
@@ -12,3 +12,17 @@ WebP 的优势体现在它具有更优的图像数据压缩算法，能带来更
 ————————————————
 版权声明：本文为CSDN博主「嵐烨」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
 原文链接：https://blog.csdn.net/u014516981/article/details/78565729
+
+
+
+
+
+
+
+| 格式 | 优点                                       | 缺点                               | 适用场景                   |
+| ---- | ------------------------------------------ | ---------------------------------- | -------------------------- |
+| gif  | 文件小，支持动画、透明，无兼容性问题       | 只支持256种颜色                    | 色彩简单的logo、icon、动图 |
+| jpg  | 色彩丰富，文件小                           | 有损压缩，反复保存图片质量下降明显 | 色彩丰富的图片/渐变图像    |
+| png  | 无损压缩，支持透明，简单图片尺寸小         | 不支持动画，色彩丰富的图片尺寸大   | logo/icon/透明图           |
+| webp | 文件小，支持有损和无损压缩，支持动画、透明 | 浏览器兼容性不好                   | 支持webp格式的app和webview |
+
