--- a/2021面试准备/js/27.jsBridge.md
+++ b/2021面试准备/js/27.jsBridge.md
@@ -1,2 +1,48 @@
 https://www.cnblogs.com/dailc/p/5931324.html#hybrid_1_1
 
+
+
+
+
+# native调用web
+
+因为**js是一个解析性语言**，可以随时随地地通过解释器执行一段JS代码。
+
+可以将 js字符串 传入webview这个js解释器中执行
+
+
+
+# web调用native
+
+### 方法1:拦截Webview请求的URL Schema
+
+URL Schema是类URL的一种请求格式，格式如下：
+
+```
+<protocol>://<host>/<path>?<qeury>#fragment
+```
+
+我们可以自定义JSBridge通信的URL Schema，比如：`jsbridge://showToast?text=hello`
+
+因为前端所有的请求都会通过webview，所以**native可以拦截请求**，检查其url schema 是否是我们需要的格式，然后拿到参数后操作native方法。如果不符合格式，则转发去请求真正的后端服务。
+
+**web发送请求的方式**
+
+1. a标签：需要用户手动点击
+2. ajax：安卓没有拦截方法
+3. location.href：会导致页面跳转
+4. frame.src: **最常使用的方案**
+
+这种方式从**早期就存在，兼容性很好**，但是由于是**基于URL的方式，长度受到限制而且不太直观**，数据格式有限制，而且建立请求有时间耗时。
+
+### 方法2:向Webview中注入JS API
+
+native直接向webview的window中注入方法，**兼容性有问题**
+
+
+
+# 带结果的回调
+
+如果前端调用native 想要回调的话，
+
+用单向调用传入callbackId，前端给callbackId绑定方法，当native接收到callbackID时，执行native调用前端的单项调用传入callbackID
