--- a/2021面试准备/网络/20.host、referer、origin的区别.md
+++ b/2021面试准备/网络/20.host、referer、origin的区别.md
@@ -5,14 +5,21 @@
 描述请求将被发送的目的地，包括，且仅仅包括**域名和端口号**。
 在任何类型请求中，request都会包含此header信息。
 
+主要用于一个ip主机虚拟分成多个主机使用
+
 # origin
 
 用来说明请求从哪里发起的，包括，且仅仅包括**协议和域名**。
+
+跟referer一样，只是缺少路径信息
+
 这个参数一般只存在于**CORS跨域请求中**，可以看到response有对应的header：`Access-Control-Allow-Origin`。
 
 # Referer
 
-告知服务器请求的原始资源的URI，其用于所有类型的请求，并且包括：**协议+域名+查询参数（注意，不包含锚点信息）**。
+告知服务器请求的原始资源的URL（就是从哪里请求过来的），其用于所有类型的请求，并且包括：**协议+域名+查询参数（路径也包含）（注意，不包含锚点信息）**。
 
 因为原始的URI中的查询参数可能包含ID或密码等敏感信息，如果写入referer，则可能导致信息泄露。
+
+主要用于防盗链
 
