--- a/2021面试准备/js/27.jsBridge.md
+++ b/2021面试准备/js/27.jsBridge.md
@@ -4,11 +4,15 @@ https://www.cnblogs.com/dailc/p/5931324.html#hybrid_1_1
 
 
 
-# native调用web
+# native调用js
 
 因为**js是一个解析性语言**，可以随时随地地通过解释器执行一段JS代码。
 
 可以将 js字符串 传入webview这个js解释器中执行
+
+
+
+执行拼接 JavaScript 字符串，从外部调用 JavaScript 中的方法，**因此 JavaScript 的方法必须在全局的 window 上。**
 
 
 
@@ -45,4 +49,4 @@ native直接向webview的window中注入方法，**兼容性有问题**
 
 如果前端调用native 想要回调的话，
 
-用单向调用传入callbackId，前端给callbackId绑定方法，当native接收到callbackID时，执行native调用前端的单项调用传入callbackID
+用**单向调用传入callbackId**，前端给callbackId绑定方法，当native接收到callbackID时，执行native调用前端的单项调用传入callbackID
