--- a/2021面试准备/js/7.proxy和definedProperty.md
+++ b/2021面试准备/js/7.proxy和definedProperty.md
@@ -106,3 +106,16 @@ p.push('55555')
 这里都可以监听的到
 
 **注意push的触发了两次get和set，原因是length也发生了改变**
+
+
+
+
+
+# vue3中proxy
+
+proxy只做了对象的一层代理
+
+- 基于 `Proxy` 和 `Reflect` ，可以原生监听数组，可以监听对象属性的添加和删除
+- 不需要深度遍历监听：判断当前 `Reflect.get` 的返回值是否为 `Object` ，如果是则再通过 `reactive` 方法做代理， 这样就实现了深度观测
+
+- 只在 `getter` 时才对对象的下一层进行劫持(优化了性能)
