--- a/2021面试准备/vue/动态路由.md
+++ b/2021面试准备/vue/动态路由.md
@@ -3,3 +3,19 @@ https://juejin.cn/post/6844904082050646023#heading-13
 https://segmentfault.com/a/1190000015437338
 
 https://segmentfault.com/q/1010000019722737
+
+
+
+
+
+# 方案一：router.addRoutes
+
+真正的动态路由，最后生成路由方案
+
+缺点：刷新后空白
+
+需要在localStorage缓存当前的路由信息
+
+# meta判断登陆key
+
+假动态真校验
