--- a/2021面试准备/webpack/1.HMR的原理.md
+++ b/2021面试准备/webpack/1.HMR的原理.md
@@ -1,12 +1,12 @@
 # 1.webpack对系统文件watch并打包到内存中
 
-webpack监听系统文件，将bundle.js打包到内存中
+webpack监听系统文件，将bundle.js打包到**内存中**
 
 不生成文件的原因就在于访问内存比较快，而且减少文件IO的时间
 
 # 2.devServer通知浏览器文件发生变化
 
-sockjs在服务端和浏览器之间简历了一个websocket连接，将webpack打包编译的各个阶段告知浏览器
+sockjs在服务端和浏览器之间简历了一个**websocket连接**，将webpack打包编译的各个阶段告知浏览器
 
 当webpack compile 完成后生成一个新的hash值给浏览器
 
@@ -14,4 +14,15 @@ webpack-dev-server 还是一个提供静态资源的express 服务
 
 # 3.浏览器拿到hash后
 
-根据manifest文件 hmr runtime 热更新
+浏览器与上一次的包进行对比，发现差异后向服务器 发送**ajax请求** 
+
+请求新的包**列表和hash**，然后通过**jsonp**去请求新的**增量chunk**
+
+后续的部分(拿到增量更新之后如何处理？哪些状态该保留？哪些又需要更新？)由 `HotModulePlugin` 来完成，提供了相关 API 以供开发者针对自身场景进行处理，像`react-hot-loader` 和 `vue-loader` 都是借助这些 API 实现 HMR。
+
+
+作者：童欧巴
+链接：https://juejin.cn/post/6844904094281236487
+来源：稀土掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
