--- a/2021面试准备/webpack/3.webpack构建流程.md
+++ b/2021面试准备/webpack/3.webpack构建流程.md
@@ -1,9 +1,15 @@
-1. 初始化参数：解析配置参数
-2. 开始编译：注册配置插件，监听微博pack构建生命周期的事件节点，执行run方法
+1. 初始化参数：解析配置参数，例如平常的 run build --dev --pro 注入不同的变量
+2. 开始编译：注册配置插件，监听webpack构建生命周期的事件节点，执行run方法
 3. 确定入口：从配置的entry 解析AST语法树
 4. 编译模块：调用loader进行转换
 5. 完成模块编译并输出：生成chunk
 6. 输出完成：io输出chunk
+
+
+
+
+
+
 
 `初始化参数` 从配置文件和 Shell 语句中读取与合并参数，得出最终的参数
 
@@ -18,6 +24,24 @@
 `输出资源` 根据入口和模块之间的依赖关系，组装成一个个包含多个模块的 Chunk，再把每个 Chunk 转换成一个单独的文件加入到输出列表，这步是可以修改输出内容的最后机会
 
 `输出完成` 在确定好输出内容后，根据配置确定输出的路径和文件名，把文件内容写入到文件系统
+
+
+
+
+
+# 简单来说
+
+- 初始化：启动构建，读取与合并配置参数，加载 Plugin，实例化 Compiler
+- 编译：从 Entry 出发，针对每个 Module 串行调用对应的 Loader 去翻译文件的内容，再找到该 Module 依赖的 Module，递归地进行编译处理
+- 输出：将编译后的 Module 组合成 Chunk，将 Chunk 转换成文件，输出到文件系统中
+
+
+
+
+作者：童欧巴
+链接：https://juejin.cn/post/6844904094281236487
+来源：稀土掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
 
 作者：ZevLin
