--- a/2021面试准备/手写八股文/15.手写jsonp.md
+++ b/2021面试准备/手写八股文/15.手写jsonp.md
@@ -1,3 +1,28 @@
+
+
+# 自己写法
+
+```js
+function myjsonp(data,callback,callbackName,url) {
+  window[callbackName] = function(res) {
+    callback(res)
+  }
+  let param = ''
+  for(let key of Object.keys(data)) {
+    param+=`&${key}=${data[key]}`
+  }
+  param = param.substring(1)
+  url = url+'?'+param+`callback=${callbackName}`
+  let script = document.createElement('script')
+  dom.src=url
+  document.appendChild(script)
+}
+```
+
+
+
+# 牛逼写法
+
 ```js
 function myJsonp(options) {
 	return new Promise((resolve, reject) => {
