--- a/2021面试准备/手写八股文/21.promise失败重传.md
+++ b/2021面试准备/手写八股文/21.promise失败重传.md
@@ -37,8 +37,6 @@ Promise.retry(a, 3).then(res => {
 
 
 
-
-
 超时重传带次数
 
 ```js
@@ -63,6 +61,7 @@ function timeout(p,delay,count) {
         }
       })
     }
+    fn()// 注意第一次触发
   })
 }
 ```
