--- a/2021面试准备/手写八股文/22.判断树镜像.md
+++ b/2021面试准备/手写八股文/22.判断树镜像.md
@@ -11,3 +11,25 @@ var isSymmetric = function(root) {
 };
 ```
 
+
+
+# 判断平衡二叉树
+
+```js
+var isBalanced = function(root) {
+    function dfs(root) {
+        if(root === null) {
+            return 0
+        }
+        let left = dfs(root.left)
+        if(left === -1) {return -1}
+        let right = dfs(root.right)
+        if(right === -1) { return -1 }
+        return Math.abs(left-right)>=2?-1:Math.max(left,right)+1
+    }
+    if(dfs(root) === -1){
+        return false
+    }else {
+        return true
+    }
+};
