--- a/2021面试准备/手写八股文/3.promise封装ajax.md
+++ b/2021面试准备/手写八股文/3.promise封装ajax.md
@@ -23,6 +23,40 @@ function ajax(url, method, data) {
 ```
 
  0：请求未初始化，还没有调用 open()。 1：请求已经建立，但是还没有发送，还没有调用 send()。 2：请求已发送，正在处理中（通常现在可以从响应中获取内容头）。 3：请求在处理中；通常响应中已有部分数据可用了，没有全部完成。 4：响应已完成；您可以获取并使用服务器的响应了。
-————————————————
-版权声明：本文为CSDN博主「lifushan123」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/lifushan123/article/details/44783407
+
+
+
+### xhr 设置timeout
+
+若超出该时间，请求会自动终止。
+
+```js
+xhr.timeout = 2000; // 超时时间，单位是毫秒
+
+xhr.onload = function () {
+  // 请求完成。在此进行处理。
+};
+
+xhr.ontimeout = function (e) {
+  // XMLHttpRequest 超时。在此做某事。
+};
+
+xhr.send(null);
+```
+
+
+
+### Xhr终止请求
+
+```js
+xhr.abort()
+```
+
+### xhr 设置请求头
+
+此方法必须在  [`open()`](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/open) 方法和 [`send()`](https://developer.mozilla.org/zh-CN/docs/Web/API/XMLHttpRequest/send)  之间调用
+
+```js
+myReq.setRequestHeader(header, value);
+```
+
