--- a/2021面试准备/手写八股文/6.排序.md
+++ b/2021面试准备/手写八股文/6.排序.md
@@ -52,40 +52,36 @@ function MySort( arr ) {
 1. 先拆分，一直拆分到只有一个数
 2. 拆分完成后，开始递归合并
 
-nlongn
+nlongn 稳定算法
 
 ```js
-function mergeSort(array, start, end) {
-    let mid = Math.floor((start + end) / 2);
-    if (start < end) {
-        //0,3 1  0,1  0,0
-        mergeSort(array, start, mid); //分治法 左边的进行归并排序
-        mergeSort(array, mid + 1, end); //右边的进行归并排序
-        merge(array, start, mid, end);
+function merge(left, right) { //合并两个有序数组
+  let result = []
+  let i = 0, j = 0
+  while(i < left.length && j < right.length) {
+    if (left[i] <= right[j]) {
+      result.push(left[i++])
+    } else {
+      result.push(right[j++])
     }
+  }
+  if (i < left.length) {
+    result.push(...left.slice(i))
+  } else {
+    result.push(...right.slice(j))
+  }
+  return result
 }
 
-function merge(array, start, mid, end) {
-    let i = start,
-        j = mid + 1,
-        arr = [];
-    while (i <= mid && j <= end) {
-        if (array[i] < array[j]) {
-            arr.push(array[i++]);
-        } else {
-            arr.push(array[j++]);
-        }
-    }
-    while (i <= mid) {
-        arr.push(array[i++]);
-    }
-    while (j <= end) {
-        arr.push(array[j++]);
-    }//33
-    for (let k = start; k <= end; k++) {
-        array[k] = arr[k - start];
-    }
-}
+function mergeSort(array) {
+  if (array.length < 2) {
+    return array
+  }
+  let m = Math.floor(array.length / 2)
+  let left = mergeSort(array.slice(0, m)) 拆分
+  let right = mergeSort(array.slice(m))
+  return merge(left, right)
+} 
 ```
 
 # 插入排序
@@ -168,3 +164,8 @@ var search = function(nums, target) {
    loop(low,high)
   return res
 };
+
+```
+
+<img src='https://camo.githubusercontent.com/854f6009d8c7b724ab389da9879898df697f96bbb21da51820d856ded7b030c5/687474703a2f2f7265736f757263652e6d757969792e636e2f696d6167652f32303230303831323030343730362e706e67'>
+
