--- a/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
+++ b/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
@@ -21,6 +21,19 @@
 - 每次收到所有报文的确认后，缓慢增加拥塞窗口，以防网络出现过早拥塞
 - 出现一次超时（即出现一次网络拥塞），就把慢开始门限值ssthresh设置为当前的拥塞窗口值乘以0.5
 
+### 慢开始算法
+
+如果立即所大量数据字节注入到网络，那么就有可能引起网络拥塞，因为现在并不清楚网络的负荷情况。
+因此，较好的方法是 先探测一下，即由小到大逐渐增大发送窗口，也就是说，由小到大逐渐增大拥塞窗口数值。
+
+还需要设置一个**慢开始门限ssthresh状态变量**。慢开始门限ssthresh的用法如下：
+
+- 当 cwnd < ssthresh 时，使用上述的慢开始算法。
+- 当 cwnd > ssthresh 时，停止使用慢开始算法而改用拥塞避免算法。
+- 当 cwnd = ssthresh 时，既可使用慢开始算法，也可使用拥塞控制避免算法。
+
+
+
 # 区别
 
 ## 1.相同点
@@ -50,10 +63,9 @@
 
 **TCP超时重传机制**，结合上面说的**慢启动**和**拥塞避免**使用就是发送完数据后开始倒计时，如果在**重发超时内**没有收到对接收方发来的ACK的话就去执行上述的**乘法减小过程（设置sstresh为原来一半）** 并重新开始慢开始算法，重新发送数据。
 
-**TCP快重传**， 则是允许发送方再连续收到**3 个重复的确认**后就可以开始执行乘法减小过程而不必再等待重发超时时间。这就需要**接收方每收到一个*****失序**的报文段就立即发出重复确认以让发送发及早知道有报文段丢失，而不是等待自己发送数据的时候进行捎带确认。
+**TCP快重传**， 则是允许发送方再连续收到**3 个重复的确认**后就可以开始执行乘法减小过程而**不必再等待重发超时**时间。这就需要**接收方每收到一个*****失序**的报文段就立即发出重复确认以让发送发及早知道有报文段丢失，而不是等待自己发送数据的时候进行捎带确认。
 
-
-
+**快重传算法还规定，发送方只要一连收到三个重复确认就应当立即重传对方尚未收到的报文段M3，而不必 继续等待M3设置的重传计时器到期。**
 作者：公众号_码农富哥
 链接：https://juejin.cn/post/6844904073611722760
 来源：稀土掘金
