--- a/2021面试准备/网络/2.CORS简单请求和非简单请求.md
+++ b/2021面试准备/网络/2.CORS简单请求和非简单请求.md
@@ -58,7 +58,14 @@ CORS是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource s
 
 浏览器先询问服务器，当前网页所在的域名是否在服务器的许可名单之中，以及可以使用哪些HTTP动词和头信息字段。只有得到肯定答复，浏览器才会发出正式的`XMLHttpRequest`请求，否则就报错。
 
-## 通过预检请求后，就是跟简单请求一样发送正常的请求了
+### 简化过程
+
+1. 转为简单请求，如用 JSONP 做跨域请求
+2. 对 options 请求进行缓存，服务器端设置 `Access-Control-Max-Age` 字段，那么当第一次请求该 URL 时会发出 OPTIONS 请求，浏览器会根据返回的 Access-Control-Max-Age 字段缓存该请求的 OPTIONS 预检请求的响应结果（具体缓存时间还取决于浏览器的支持的默认最大值，取两者最小值，一般为 10 分钟）。在缓存有效期内，该资源的请求（URL 和 header 字段都相同的情况下）不会再触发预检。（chrome 打开控制台可以看到，当服务器响应 Access-Control-Max-Age 时只有第一次请求会有预检，后面不会了。注意要开启缓存，去掉 disable cache 
+
+
+
+## 
 
 # 与JSONP的比较
 
