--- a/2021面试准备/js/9.串行并行异步控制器.md
+++ b/2021面试准备/js/9.串行并行异步控制器.md
@@ -116,42 +116,55 @@ function lan(arr){
   }
 }
 lan(arr)
+
+
+async function lan(arr) {
+  for(let x of arr) {
+    let res = await as(x)
+    console.log(res)
+  }
+}
 ```
 
 # 限制并行个数的串行异步版本
 
+因为这里并行执行，所以跟promise.all一样需要处理好结果的index
+
+注意这里计算并行数的count只加不减（不会有同一请求处理两次的情况）
+
+有空缺的完成的请求递归补上
+
 ```js
-let resList = []
-let limit = 2
-let runner = 0
-
-function as(data) {
-  return new Promise(resolve => {
-    setTimeout(() => {
-      resolve(data)
-    }, 1000)
-  })
-}
-
-let arr = [1, 2, 3,4,5]
-
-function lan(arr) {
-  while (runner < limit && arr.length > 0) {
-    let item = arr.shift()
-    as(item).then(res => {
-      console.log('执行完', res)
-      resList.push(res)
-      runner--
-      //注意这里跟串行一样，then里递归调用
-      if (arr.length > 0) {
-        lan(arr)
-      } else if (runner === 0) {
-        console.log('结束了', resList)
+function multiRequest(urls = [], maxNum) {
+    let result = new Array(urls.length).fill(false)
+    let sum = urls.length; //总数
+    let count = 0;             //已完成数
+    return new Promise((resolve, reject) => {
+      //先请求maxNum个，达到并行数量    
+      while (count < maxNum) {
+        next()
+      }
+      function next() {
+        let current = count++
+        // 边界
+        if (current >= sum) {
+          !result.includes(false) && resolve(result)
+          return
+        }
+        let url = urls[current];
+        fetch(url).then((res) => {
+          result[current] = res
+          //还有未完成，递归；
+          if (current < sum) {
+            next()
+          }
+        }).catch((err) => {
+          result[current] = err
+          if (current < sum) {
+            next()
+          }
+        })
       }
     })
-    runner++
-  }
 }
-
-lan(arr)
 ```
