--- a/2021面试准备/vue/父子生命周期执行流程.md
+++ b/2021面试准备/vue/父子生命周期执行流程.md
@@ -1,1 +1,18 @@
-父beforeCreate-> 父created -> 父beforeMounte -> 子beforeCreate ->子create ->子beforeMount ->子 mounted -> 父mounted
+
+
+1. 父组建： beforeCreate -> created -> beforeMount
+2. 子组件： -> beforeCreate -> created -> beforeMount -> mounted
+3. 父组件： -> mounted
+4. 总结：从外到内，再从内到外
+
+
+
+1. 加载渲染过程
+   `父beforeCreate->父created->父beforeMount->子beforeCreate->子created->子beforeMount->子mounted->父mounted`
+2. 子组件更新过程
+   `父beforeUpdate->子beforeUpdate->子updated->父updated`
+3. 父组件更新过程
+   `父beforeUpdate->父updated`
+4. 销毁过程
+   `父beforeDestroy->子beforeDestroy->子destroyed->父destroyed`
+
