--- a/2021面试准备/手写八股文/5.深拷贝.md
+++ b/2021面试准备/手写八股文/5.深拷贝.md
@@ -12,30 +12,27 @@ function shen(obj){
   return res
 }
 
-let obj1 = {
-  a: {
-    c: /a/,
-    d: undefined,
-    b: null
-  },
-  b: function () {
-    console.log(this.a)
-  },
-  c: [
-    {
-      a: 'c',
-      b: /b/,
-      c: undefined,
-      d:new Date()
-    },
-    'a',
-    3
-  ]
-}
-let obj2 = shen(obj1);
-obj1.b = undefined
-obj1.c[0].a = 'xxxx'
-console.log(obj2);
-console.log(obj1);
 ```
 
+
+
+
+
+```js
+function deepCopy(target, cache = new Set()) {
+  if (typeof target !== 'object' || cache.has(target)) {
+    return target
+  }
+  if (Array.isArray(target)) {
+    target.map(t => {
+      cache.add(t)
+      return t
+    })
+  } else {
+    return [...Object.keys(target), ...Object.getOwnPropertySymbols(target)].reduce((res, key) => {
+      cache.add(target[key])
+      res[key] = deepCopy(target[key], cache)
+      return res
+    }, target.constructor !== Object ? Object.create(target.constructor.prototype) : {})
+  }
+}
