--- a/2021面试准备/手写八股文/7.数组去重.md
+++ b/2021面试准备/手写八股文/7.数组去重.md
@@ -1,1 +1,26 @@
 https://segmentfault.com/a/1190000016418021?utm_source=tag-newest
+
+
+
+# Es5
+
+```js
+function unique(arr){            
+  for(var i=0; i<arr.length; i++){
+      for(var j=i+1; j<arr.length; j++){
+          if(arr[i]==arr[j]){         //第一个等同于第二个，splice方法删除第二个
+              arr.splice(j,1);
+              j--;
+          }
+      }
+  }
+return arr;
+}
+```
+
+
+
+```js
+let arr = [...new Set(arr)]
+```
+
