--- a/2021面试准备/手写八股文/扁平化.md
+++ b/2021面试准备/手写八股文/扁平化.md
@@ -1,8 +1,18 @@
 ```js
-function flat(arr) {
+function flat(arr,n=1) {
+  let count = n
   return arr.reduce((pre,cur)=> {
-    return pre.concat(Array.isArray(cur)? flat(cur):cur)
+    if(count>0){
+      count--
+      return pre.concat(Array.isArray(cur)? flat(cur,count):cur)
+    }else {
+      return pre.concat(cur)
+    }
   },[])
 }
+let arr =  [1,[2,3,4,[5,6,7,[8,9]]]]
+console.log(flat(arr,2));
+
+console.log(arr.flat(2));
 ```
 
