--- a/2021面试准备/网络/18.websocket和服务端推送.md
+++ b/2021面试准备/网络/18.websocket和服务端推送.md
@@ -7,6 +7,7 @@
 - 可以发送文本，也可以发送二进制数据。
 - **没有同源限**制，客户端可以与任意服务器通信。
 - 协议标识符是ws（如果加密，则为wss），服务器网址就是 URL。
+- headr中有 connection：Upgrade      Upgrade：websocket
 
 # API
 
