--- a/2021面试准备/js/13.图片懒加载技术.md
+++ b/2021面试准备/js/13.图片懒加载技术.md
@@ -49,3 +49,7 @@ window.onload = function(){
 ```
 
 html中src先放一个伪图片，加载完成后将data-src赋值过去
+
+用js创建一个图片，通过data-src赋值给js图片src不显示在页面上实现隐形加载
+
+通过onload函数实现异步
