--- a/2021面试准备/js/42.betterScroll探究.md
+++ b/2021面试准备/js/42.betterScroll探究.md
@@ -24,7 +24,7 @@
 
 
 
-```
+```javascript
 // Slow down or stop if outside of the boundaries
 if (newY > 0 || newY < this.maxScrollY) {
     if (this.options.bounce) {
@@ -37,7 +37,7 @@ if (newY > 0 || newY < this.maxScrollY) {
 
 第二步是调用`BScroll.prototype.resetPosition`函数，回弹到边界。
 
-```
+```javascript
 BScroll.prototype.resetPosition = function (time = 0, easeing = ease.bounce) {
     ...
     let y = this.y
