--- a/2021面试准备/js/48.webComponent.md
+++ b/2021面试准备/js/48.webComponent.md
@@ -54,6 +54,11 @@
     <user-card></user-card>
    
   <template id="userCardTemplate">
+    <style>
+      .container {
+        witdth:200px;
+      }
+    </style>
     <img src="https://semantic-ui.com/images/avatar2/large/kristy.png" class="image">
     <div class="container">
       <p class="name">User Name</p>
@@ -79,6 +84,35 @@
 - 把样式写到template 里的style标签下
 
 - 传递参数直接往标签上写属性
+
+  ```html
+  <user-card
+    image="https://semantic-ui.com/images/avatar2/large/kristy.png"
+    name="User Name"
+    email="yourmail@some-email.com"
+  ></user-card>
+  
+  ```
+
+  然后用this获取属性
+
+  ```js
+  class UserCard extends HTMLElement {
+    constructor() {
+      super();
+  
+      var templateElem = document.getElementById('userCardTemplate');
+      var content = templateElem.content.cloneNode(true);
+      content.querySelector('img').setAttribute('src', this.getAttribute('image'));
+      content.querySelector('.container>.name').innerText = this.getAttribute('name');
+      content.querySelector('.container>.email').innerText = this.getAttribute('email');
+      this.appendChild(content);
+    }
+  }
+  window.customElements.define('user-card', UserCard);    
+  ```
+
+  
 
 - 开启shadowdom 解决样式冲突，关闭外界查看
 
