--- a/2021面试准备/js/53.immutable.js.md
+++ b/2021面试准备/js/53.immutable.js.md
@@ -33,3 +33,27 @@
 >   
 
 用的最多就是List和Map，所以在这里主要介绍这两种数据类型的API。
+
+```js
+import { Map } from 'immutable';
+let historyIndex = 0;
+let history = [Map({ name: 'zcy' })];
+function operation(fn) {
+  history = history.slice(0, historyIndex + 1);
+  let newVersion = fn(history[historyIndex]);
+  // 将新版本追加到历史列表中
+  history.push(newVersion);
+  // 记录索引，historyIndex 决定我们是否有撤销和重做
+  historyIndex++;
+}
+function changeHeight(height) {
+  operation(function(data) {
+    return data.set('height', height);
+  });
+}
+// 判断是否有重做
+let hasRedo = historyIndex !== history.length - 1;
+// 判断是否有撤销
+let hasUndo = historyIndex !== 0; 
+
+```
