--- a/2021面试准备/js/8.js数字的存储.md
+++ b/2021面试准备/js/8.js数字的存储.md
@@ -2,7 +2,13 @@
 
 指数位：11bit，指数位决定了数值表示的幂指数，也就是上面中的3,
 
-尾数位：52bit，尾数位决定了和幂指数相乘的定点数，也就是上面的a.bcdefg
+尾数位：52bit，尾数位决定了和幂指数相乘的定点数，超过直接进1  去0
 
 IEEE754
+
+
+
+因为浮点数转化为二进制是无穷的所以在限制位产生精度丢失
+
+解决 Math.js 
 
