--- a/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
+++ b/2021面试准备/网络/1.TCP流量控制和拥塞控制.md
@@ -10,7 +10,7 @@
 
 > 使用滑动窗口，就可以一次发送多条数据，从而就提高了性能 可以高效可靠的发送大量的数据
 
-窗口大小指的是无需等待确认应答而可以继续发送数据的最大值，即就是说不需要接收端的应答，可以一次连续的发送数据
+窗口大小指的是无需等待确认应答而可以继续发送数据的最大值，即就是说**不需要接收端的应答，可以一次连续的发送数据**
 
 # 拥塞控制
 
