--- a/2021面试准备/js/21.map(parseInt).md
+++ b/2021面试准备/js/21.map(parseInt).md
@@ -6,3 +6,35 @@ https://blog.csdn.net/weixin_44135121/article/details/88050214
 
 这是一道前端面试题，先说结果：[1, NaN, NaN]
 概念：以第二个参数为基数来解析第一个参数字符串，通常用来做十进制的向上取整（省略小数）如：parseInt(2.7) //结果为2
+
+1）   区间范围介于2~36之间；
+
+   2 ）  当参数为 0，parseInt() 会根据十进制来解析；
+
+   3 ）  如果忽略该参数，默认的基数规则：
+
+           如果 string 以 "0x" 开头，parseInt() 会把 string 的其余部分解析为十六进制的整数；parseInt("0xf")   //15 
+    
+           如果 string 以 0 开头，其后的字符解析为八进制或十六进制的数字；parseInt("08")   //8
+    
+           如果 string 以 1 ~ 9 的数字开头，parseInt() 将把它解析为十进制的整数；parseInt("88.99f")   //88
+    
+           只有字符串中的第一个数字会被返回。parseInt("10.33")   //返回10；
+    
+           开头和结尾的空格是允许的。parseInt(" 69 10 ")   //返回69
+    
+           如果字符串的第一个字符不能被转换为数字，返回 NaN。parseInt("f")  //返回NaN  而parseInt("f"，16)  //返回15
+
+三、再来分析一下结果
+['1','2','3'].map(parseInt)即
+
+parseInt('1',0);radix 为 0，parseInt() 会根据十进制来解析，所以结果为 1；
+
+parseInt('2',1);radix 为 1，超出区间范围，所以结果为 NaN；
+
+parseInt('3',2);radix 为 2，用2进制来解析，应以 0 和 1 开头，所以结果为 NaN。
+
+
+————————————————
+版权声明：本文为CSDN博主「杏子_1024」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/weixin_44135121/article/details/88050214
