--- a/2021面试准备/网络/8.跨域终极解答.md
+++ b/2021面试准备/网络/8.跨域终极解答.md
@@ -76,10 +76,10 @@ api复杂
 实现原理：**同源策略是浏览器需要遵循的标准，而如果是服务器向服务器请求就无需遵循同源策略。**
 代理服务器，需要做以下几个步骤：
 
-- 接受客户端请求 。
-- 将请求 转发给服务器。
+- Node接受客户端请求 。
+- Node将请求 转发给服务器。
 - 拿到服务器 响应 数据。
-- 将 响应 转发给客户端。
+- node将 响应 转发给客户端。
 
 ## nginx反向代理 类似node
 
