--- a/2021面试准备/css/13.flex-basis.md
+++ b/2021面试准备/css/13.flex-basis.md
@@ -39,11 +39,11 @@
 
 # 缩小问题
 
-当子元素超过时
+当子元素超过时，按照溢出部分按照比值缩小。
 
 子元素的 flex-shrink 的值分别为 2，1
 溢出：500+400 - 600 = 300。
 **总权重为** 2 * 500+ 1 * 400 = 1400
-两个元素分别收缩：
+两个元素分别收缩了：
 300 * 2(flex-shrink) * 500(width) / 1400= 214.28
 300 * 1(flex-shrink) * 400(width) / 1400= 85.72
