--- a/2021面试准备/css/7.unset initial inherit.md
+++ b/2021面试准备/css/7.unset initial inherit.md
@@ -1,5 +1,5 @@
 这三个值是css属性的默认选项，都可以选
 
 - unset 
-  - 如果属性是一个继承属性，那么unset 就设置为默认继承 initial
-  - 如果属性是由默认值的非继承属性，那么就设置为默认值 inherit
+  - 如果属性是一个继承属性，那么unset 就设置为默认继承 inherit
+  - 如果属性是由默认值的非继承属性，那么就设置为默认值 initial
