--- a/2021面试准备/js/33.this指向.md
+++ b/2021面试准备/js/33.this指向.md
@@ -1,4 +1,8 @@
 ```js
+//箭头函数、new、bind、apply 和 call、欧比届点（obj.）、直接调用、不在函数里。
+
+//非严格模式下this指向undefined 和 null时改变指向全局，只有当严格模式下才可以指向
+
 this.a = 20;
 var test = {
     a: 40,
@@ -35,3 +39,7 @@ b=5
 var a=b
 
 所以b可以是全局变量包括d，e有let，a有var有作用域影响
+
+当没有var的时候会在全局对象下挂在一个属性
+
+当全局作用域下没有var时，会创建一个全局对象并且在window下挂一个属性
