--- a/2021面试准备/js/51.pwa.md
+++ b/2021面试准备/js/51.pwa.md
@@ -22,11 +22,14 @@
 
 **Service worker**
 
-一个浏览器后端独立运行的脚本
+一个浏览器后端独立运行的脚本,是webworker的升级版，与webwork相比
+
+- 可以服务于多个页面
+- 在关闭页面后仍存在于浏览器的后台线程
 
 应用： 1.缓存css字体图片等静态资源 2. 缓存一个offline.html 甚至可以像chrome一样缓存一个小游戏
 
-
+https://github.com/youngwind/blog/issues/113
 
 ### 消息推送
 
