--- a/2021面试准备/js/9.串行并行异步控制器.md
+++ b/2021面试准备/js/9.串行并行异步控制器.md
@@ -126,7 +126,7 @@ async function lan(arr) {
 }
 ```
 
-# 限制并行个数的串行异步版本
+# 限制并行个数的串行异步版本(不看)
 
 因为这里并行执行，所以跟promise.all一样需要处理好结果的index
 
@@ -168,3 +168,46 @@ function multiRequest(urls = [], maxNum) {
     })
 }
 ```
+
+# 限制个数并行
+
+```js
+function sync(item) {
+    return new Promise(resolve=> {
+        setTimeout(()=> {
+            console.log(item)
+            resolve(item+'done')
+        },1000)
+    })
+}
+
+function control(count,max) {
+    let cur = 0
+    let res = []
+    let runner = 0
+    return new Promise(resolve=> {
+        function next() {
+            while(runner<max && cur<count) {
+                runner++
+                let now = cur++
+                sync(now).then(result=> {
+                    runner--
+                    res.push(result)
+                    if(cur<count) {
+                        next()
+                    }else if(runner === 0) {
+                        resolve(res)
+                        return
+                    }
+                })
+            }
+        }
+        next()
+    })
+}
+
+control(10,3).then(res=> {
+    console.log(res)
+})
+```
+
