--- a/2021面试准备/webpack/12.gulp和webpack.md
+++ b/2021面试准备/webpack/12.gulp和webpack.md
@@ -10,7 +10,7 @@
 |          |                                                              |                                                              |
 |          |                                                              |                                                              |
 
-gulp出现的较早，目标是 task runner 进行一系列代码压缩 sass转css 的工作，但是没有 解决 js module 的问题
+gulp出现的较早，目标是 task runner 进行一系列代码压缩 sass转css 的工作，但是没有 解决 js module 的问题，原生不支持模块化，是一个自动化压缩工具
 
 webpack 最早就是一个 解决js module 把 css image js 都用js引用 最后生成一个js bundle
 
@@ -24,11 +24,18 @@ https://zhuanlan.zhihu.com/p/55869217
 
 # rollup
 
-专注于 js的打包
+专注于 js的打包，推荐使用ES moudule来实现
 
 webpack有静态资源导入、hmr等功能 rollup并没有
 
-但是webpack的非业务注入代码过多，如何纯打包js代码 rollup更实用
+但是webpack的非业务注入代码过多，如何纯打包js代码 rollup更实用，由于webpack出现早，当时还没有ES moudule 需要其自己给浏览器支持commonjs
+
+纯esm纯cjs两者混用webpack支持（有代码注入）支持（有代码注入）支持（有代码注入）rollup**支持（无注入）**原生不支持（需增加插件@rollup/plugin-commonjs）原生不支持（需增加插件@rollup/plugin-commonjs）
+
+|         | 纯esm          | 纯cjs              | 混用       |
+| ------- | -------------- | ------------------ | ---------- |
+| rollup  | 支持无代码注入 | 原生不支持         | 原生不支持 |
+| webpack | 不支持         | 原声支持有代码注入 | 有代码混入 |
 
 
 
