--- a/2021面试准备/手写八股文/18.节流防抖.md
+++ b/2021面试准备/手写八股文/18.节流防抖.md
@@ -1,5 +1,9 @@
 # throttle
 
+一直触发每隔delay就会再次执行
+
+下拉监听，主要为了减少执行次数
+
 ```js
 function throttle(fn, interval) {
   // last为上一次触发回调的时间
@@ -25,6 +29,10 @@ function throttle(fn, interval) {
 ```
 
 # debonce
+
+一直触发，不执行该函数，只有当触发后停止delay再次执行
+
+为了防止一瞬间触发多次，搜索框联想操作
 
 ```js
 function debounce(fn, delay) {
