--- a/2021面试准备/手写八股文/20.手写promiseRace.md
+++ b/2021面试准备/手写八股文/20.手写promiseRace.md
@@ -13,7 +13,9 @@ function promiseRace(promise) {
                 		resolved = true;
                 		resolve (data);
                 	}
-                })
+                },err=>{
+        
+      })
             )
 		} catch (error) {
 			reject(error);
@@ -23,7 +25,7 @@ function promiseRace(promise) {
 
 ```
 
-race 那个成功过那个
+race 那个改变过那个
 
 any 有一个成功就行,失败要全部失败，返回数组失败错误原因
 
