--- a/2021面试准备/手写八股文/5.深拷贝.md
+++ b/2021面试准备/手写八股文/5.深拷贝.md
@@ -19,20 +19,35 @@ function shen(obj){
 
 
 ```js
-function deepCopy(target, cache = new Set()) {
-  if (typeof target !== 'object' || cache.has(target)) {
-    return target
-  }
-  if (Array.isArray(target)) {
-    target.map(t => {
-      cache.add(t)
-      return t
-    })
-  } else {
-    return [...Object.keys(target), ...Object.getOwnPropertySymbols(target)].reduce((res, key) => {
-      cache.add(target[key])
-      res[key] = deepCopy(target[key], cache)
-      return res
-    }, target.constructor !== Object ? Object.create(target.constructor.prototype) : {})
-  }
+
+function deepClone(target,map = new WeakMap()) {
+    let isObject = (typeof target === 'object' || typeof target === 'function') && target !== null
+    //克隆普通对象
+    if(!isObject){
+        return target
+    }
+    //初始化
+    let cloneTarget =  Object.create(Object.getPrototypeOf(target))
+
+    //防止循环引用
+    if(map.get(target)) {
+        return target
+    }
+    map.set(target,cloneTarget)
+
+    for (const key in target) {
+        cloneTarget[key] = deepClone(target[key], map);
+    }
+    return cloneTarget;
 }
+const target = {
+    field1: 1,
+    field2: undefined,
+    field3: {
+        child: 'child'
+    },
+    field4: [2, 4, 8]
+};
+target.target = target;
+
+console.log(deepClone(target).field4[2])
