--- a/2021面试准备/网络/14.三次握手，四次挥手.md
+++ b/2021面试准备/网络/14.三次握手，四次挥手.md
@@ -21,6 +21,25 @@
 
 
 
+
+
+# 什么是半连接队列？
+
+服务器第一次收到客户端的 SYN 之后，就会处于 SYN_RCVD 状态，此时双方还没有完全建立其连接，服务器会把此种状态下请求连接放在一个**队列**里，我们把这种队列称之为**半连接队列**。
+
+当然还有一个**全连接队列**，就是已经完成三次握手，建立起连接的就会放在全连接队列中。如果队列满了就有可能会出现丢包现象。
+
+#  三次握手过程中可以携带数据吗？
+
+# ISN(Initial Sequence Number)是固定的吗？
+
+# SYN攻击是什么？
+
+- 缩短超时（SYN Timeout）时间
+- 增加最大半连接数
+- 过滤网关防护
+- SYN cookies技术
+
 # SYN 泛洪攻击
 
 - 在客户端发送 SYN 报文给服务器（第一次握手），服务端收到连接请求报文段后，服务器不会为此SYN创建半开连接，而是生成一个序列号（所谓的 cookie）一起发送给客户端（第二次握手），在这个阶段，服务器不会为该连接分配任何资源
@@ -30,3 +49,9 @@
 # 四次挥手
 
 https://juejin.cn/post/6844903958624878606
+
+
+
+# 为什么要四次
+
+# 2MSL等待时间的意思
