--- a/2021面试准备/网络/2.CORS简单请求和非简单请求.md
+++ b/2021面试准备/网络/2.CORS简单请求和非简单请求.md
@@ -72,3 +72,24 @@ CORS是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource s
 CORS与JSONP的使用目的相同，但是比JSONP更强大。
 
 JSONP只支持`GET`请求，CORS支持所有类型的HTTP请求。JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据。
+
+
+
+
+
+- # **为什么要对非简单跨域请求做预检？**
+
+原因有以下几点：
+
+1. 减少非简单跨域请求对服务器的影响（开始时就提到，服务器有时候不想理睬跨域请求），比如PUT、DELETE请求可以直接新建或者修改、删除服务器中的资源。预检请求可以防止该情况发生。
+2. 减少服务器对于是否跨域的计算量
+
+对于非简单请求的跨域请求，服务器对于是否跨域的计算是在预检请求上，如果预检请求通过之后，正式请求都不用再次计算。而且一次预检请求通过后，之后的每次请求都只会发正式请求。节约了很多服务端的计算量。
+
+- # **为什么不对简单的跨域请求做预检？**
+
+原因有以下几点：
+
+1. 一开始就提到，form能实现的简单跨域请求，浏览器做不了任何的限制。
+2. 没必要对简单请求做预检。比如，一些post请求只是想打个日志，并不需要服务器的响应，但是如果加预检请求，预检请求不通过就做不了这件事。还有一些GET请求、HEAD请求只是想获取资源，并不会修改资源，在不获取响应的时候并不会对服务器造成影响。在这种情况下，加预检请求，只会增加服务器的负担
+
