--- a/2021面试准备/网络/29.如何验证证书合法性.md
+++ b/2021面试准备/网络/29.如何验证证书合法性.md
@@ -6,3 +6,10 @@
 （5）**浏览器使用相同的hash算法计算出服务器发来的证书的hash值，将这个计算的hash值与证书中签名做对比**
 （6）对比结果一致，则证明服务器发来的证书合法，没有被冒充
 
+https://juejin.cn/post/6991888178890145828#heading-9
+
+
+
+https并没有完全避免中间人攻击
+
+只能加大中间人攻击的成本，没有绝对的安全
