--- a/2021面试准备/网络/7.常见状态码.md
+++ b/2021面试准备/网络/7.常见状态码.md
@@ -22,7 +22,7 @@
 
 · 400 bad request，请求报文存在语法错误
 
-· 401 unauthorized，表示发送的请求需要有通过 HTTP 认证的认证信息
+**· 401 unauthorized，表示发送的请求需要有通过 HTTP 认证的认证信息**
 
 · 403 forbidden，表示对请求资源的访问被服务器拒绝
 
