--- a/2021面试准备/网络/22.http报文格式.md
+++ b/2021面试准备/网络/22.http报文格式.md
@@ -12,3 +12,41 @@ https://juejin.cn/post/6875936016495345678
 
 ![img](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/94a0bdb5295342658866b09ab90ab363~tplv-k3u1fbpfcp-watermark.awebp)
 
+```http
+GET /admin_ui/rdx/core/images/close.png HTTP/1.1
+Accept: */*
+Referer: http://xxx.xxx.xxx.xxx/menu/neo
+Accept-Language: en-US
+User-Agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; WOW64; Trident/7.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; .NET4.0C; .NET4.0E)
+Accept-Encoding: gzip, deflate
+Host: xxx.xxx.xxx.xxx
+Connection: Keep-Alive
+Cookie: startupapp=neo; is_cisco_platform=0; rdx_pagination_size=250%20Per%20Page; SESSID=deb31b8eb9ca68a514cf55777744e339
+请求报文
+```
+
+```http
+HTTP/1.1 200 OK
+Bdpagetype: 1
+Bdqid: 0xacbbb9d800005133
+Cache-Control: private
+Connection: Keep-Alive
+Content-Encoding: gzip
+Content-Type: text/html
+Cxy_all: baidu+f8b5e5b521b3644ef7f3455ea441c5d0
+Date: Fri, 12 Oct 2018 06:36:28 GMT
+Expires: Fri, 12 Oct 2018 06:36:26 GMT
+Server: BWS/1.1
+Set-Cookie: delPer=0; path=/; domain=.baidu.com
+Set-Cookie: BDSVRTM=0; path=/
+Set-Cookie: BD_HOME=0; path=/
+Set-Cookie: H_PS_PSSID=1433_21112_18560_26350_27245_22158; path=/; domain=.baidu.com
+Vary: Accept-Encoding
+X-Ua-Compatible: IE=Edge,chrome=1
+Transfer-Encoding: chunked
+
+<!DOCTYPE html>
+<!--STATUS OK-->
+相应报文
+```
+
