--- a/CSS/基础/4.CSS选择器.md
+++ b/CSS/基础/4.CSS选择器.md
@@ -178,3 +178,20 @@ div ~ span{
 在content中设置字体的编码
 
 设置字体的样式
+
+
+
+
+
+优先级是由 `A` 、`B`、`C`、`D` 的值来决定的，其中它们的值计算规则如下：
+
+1. 如果存在内联样式，那么 `A = 1`, 否则 `A = 0`;
+2. `B` 的值等于 `ID选择器` 出现的次数;
+3. `C` 的值等于 `类选择器` 和 `属性选择器` 和 `伪类` 出现的总次数;
+4. `D` 的值等于 `标签选择器` 和 `伪元素` 出现的总次数 。
+
+**比较规则是: 从左往右依次进行比较 ，较大者胜出，如果相等，则继续往右移动一位进行比较 。如果4位全部相等，则后面的会覆盖前面的**
+作者：Momo
+链接：https://juejin.cn/post/6844903709772611592
+来源：稀土掘金
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
