--- a/2021面试准备/手写八股文/2. bind手写.md
+++ b/2021面试准备/手写八股文/2. bind手写.md
@@ -5,13 +5,33 @@
 
 
 ```js
-Function.prototype.bind = function(context) {
-  let self = this; // 保存函数的引用
-  return function() {// 返回一个新的函数
-   // console.log(arguments);
-    // return self.apply(context, arguments);
-    return self.call(context, arguments);
+// 第四版
+Function.prototype.bind2 = function (context,...args) {
+
+    var self = this;
+
+    var fNOP = function () {};
+
+    var fBound = function () {
+        var bindArgs = Array.prototype.slice.call(arguments);
+        return self.apply(this instanceof fNOP ? this : context, args.concat(bindArgs));
+    }
+		//这几句是object.create的polyfill
+    fNOP.prototype = this.prototype;
+    fBound.prototype = new fNOP();
+    return fBound;
+}
+```
+
+```js
+function mynew (constructor,...args) {
+ 	let context = Object.create(constructor.prototype)
+  let res = constructor.apply(context,args)
+  if(typeof res ==='object') {
+    return res
+  }else {
+    return context
   }
-};
+}
 ```
 
